# yigraf

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/yigraf/: SKILL.md
.github/workflows/: release.yml
docs/: BUILD-PLAN.md  DESIGN.md  authoring-skill.md  capture-flow.md  caveats.md  graph-design.md  guide.md  hosts.md  index.html  language-support.md  m1-notes.md  m2-notes.md  m3-notes.md  m4-notes.md  m5-notes.md  m6-notes.md  m7-notes.md  m8-notes.md  mcp.md  memory-model.md  retrieval-design.md  spec-lifecycle.md  statusline.md  yigraf-v0.md  yigraf-vision.md
docs/research/: codegraph-analysis.md  graphify-analysis.md  harness-engineering-notes.md  openspec-analysis.md  recap-paper-analysis.md
scripts/eval/: README.md  cases.yaml  judge.py  parse_run.py  render_ab.py  run_ab.py
src/yigraf/: __init__.py  __main__.py  artifacts.py  astnorm.py  cache.py  cli.py  config.py  contradiction.py  counters.py  drift.py  embeddings.py  extract.py  filelog.py  fold.py  graph.py  graphdb.py  hooks.py  log.py  mcp_server.py  memory.py  onlinelog.py  onlineview.py  relations.py  retrieval.py  revision.py  scaffold.py  status.py  sync.py  update.py
src/yigraf/languages/: __init__.py  base.py  go.py  jsts.py  python.py  resolve.py  tags.py
tests/: conftest.py  test_artifacts.py  test_astnorm.py  test_build.py  test_cchooks.py  test_cli.py  test_config.py  test_context.py  test_contradiction.py  test_counters.py  test_drift.py  test_embeddings.py  test_eval_judge.py  test_eval_parse.py  test_eval_runab.py  test_extract.py  test_fold.py  test_graph.py  test_graphdb.py  test_hooks.py  test_init.py  test_intent_evolution_and_file_anchors.py  test_invariants.py  test_language_drift.py  test_languages.py  test_log.py  test_mcp.py  test_memory.py  test_migrate.py  test_multihost.py  test_online.py  test_rejection_premises.py  test_relations.py  test_relations_wiring.py  test_reserved_budget.py  test_revision.py  test_status.py  test_sync.py  test_tags.py  test_update.py  (+1 more)
yigraf/: .gitattributes  .gitignore  config.yaml  graph.json
yigraf/intents/: drift-detection.md  enforceable-link.md  hook-surfacing.md  mcp-server.md  memory-family.md  memory-maturity.md  multi-host.md  semantic-recall.md  status-surface.md  structure-index.md  token-cheap-context.md
yigraf/memory/: 001-concerns-reuses-the-implements-drift-machinery.md  002-the-first-memory-milestone-captures-agent.md  003-supersession-counters-are-stamped-only-on.md  004-embed-only-memory-and-intent-with.md  005-the-embedding-backend-is-an-optional.md  006-v0-counters-are-local-recomputable-model.md  007-maturity-is-git-derived-survival-commits.md  008-gc-archives-superseded-churn-moves-it.md  009-maturity-survival-is-derived-in-a.md  010-claude-hooks-write-the-abs-interpreter.md  011-capture-gap-legibility-surface-done-tasks.md  012-human-facing-graph-stats-ride-a.md  013-context-window-occupancy-is-an-injected.md  014-freshness-is-derived-by-comparing-the.md  015-the-status-render-must-force-color.md  016-the-universal-cross-host-adapter-is.md  017-the-mcp-server-runs-in-process.md  018-mcp-write-tools-shell-out-to.md  019-codex-push-hooks-reuse-the-claude.md  020-antigravity-has-no-hooks-so-its.md  021-yigraf-install-auto-detects-hosts-by.md  022-the-pretty-statusline-brand-is-a.md  023-install-claude-hooks-now-also-wires.md  024-install-claude-hooks-writes-a-jq.md  025-install-claude-hooks-wires-claude-code.md  026-yigraf-self-checks-pypi-for-a.md  027-yigraf-install-wires-full-power-by.md  028-the-mcp-sdk-mcp-1-2.md  029-semantic-recall-is-a-core-dependency.md  030-yigraf-install-wires-full-power-by.md
yigraf/plans/active/: language-drift-coverage.md  mcp-server.md  memory-milestone.md  multi-host.md  phase-3-structure-depth.md  status-surface.md  yigraf-v0.md
