[project]
name = "yigraf"
version = "0.0.0"
description = "A harness primitive for AI coding agents: one connected graph over code, intent, plan, and memory — legible (token-cheap retrieval) and enforceable (intent↔code drift checks)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "networkx>=3.4",
    # Structure index. Core (not an extra): the structure graph is foundational. The core
    # industry-language grammars are bundled so support lights up the moment an extractor lands —
    # version ranges mirror Graphify's known-good coexisting set (docs/research/graphify-analysis.md).
    # Extractors ship incrementally (Python + Go in v0); a bundled grammar with no extractor yet is
    # simply unused, and the `languages` config gates which actually run.
    # Core floor is 0.25: tree-sitter-go 0.25 emits language ABI 15, which needs core >=0.25; 0.25
    # stays backward-compatible with the older (ABI 14) grammars below.
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-python>=0.23,<0.26",
    "tree-sitter-go>=0.23,<0.26",
    "tree-sitter-javascript>=0.23,<0.26",
    "tree-sitter-typescript>=0.23,<0.25",
    "tree-sitter-rust>=0.23,<0.25",
    "tree-sitter-java>=0.23,<0.25",
    "tree-sitter-c>=0.23,<0.25",
    "tree-sitter-cpp>=0.23,<0.25",
    "tree-sitter-ruby>=0.23,<0.25",
    "tree-sitter-c-sharp>=0.23,<0.25",
    "tree-sitter-kotlin>=1.0,<2.0",
    "tree-sitter-scala>=0.23,<0.27",
    "tree-sitter-php>=0.23,<0.25",
    "tree-sitter-swift>=0.7,<0.9",
    "tree-sitter-bash>=0.23,<0.25",
    "tree-sitter-sql>=0.3,<0.4",
]

[project.optional-dependencies]
# Scoped semantic recall over memory+intent (M8, docs/retrieval-design.md §10). Optional by design:
# with this extra uninstalled, retrieval degrades gracefully to the lexical/IDF seeder (= v0).
# numpy is the brute-force cosine index; sentence-transformers is the default local bge-small backend.
embeddings = [
    "numpy>=1.24",
    "sentence-transformers>=2.2",
]

[project.scripts]
yigraf = "yigraf.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yigraf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
