[project]
name = "yigraf"
version = "0.1.6"
description = "A harness primitive for AI coding agents: one connected graph over code, intent, plan, and memory — legible (token-cheap retrieval) and enforceable (intent↔code drift checks)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ricardo Mansilla", email = "rick.mansilla@gmail.com" }]
keywords = ["ai", "agents", "llm", "claude", "code-intelligence", "tree-sitter", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "networkx>=3.4",
    # Structure index. Core (not an extra): the structure graph is foundational. The core
    # industry-language grammars are bundled so support lights up the moment an extractor lands —
    # version ranges are a known-good coexisting set across the tree-sitter grammars.
    # Extractors ship incrementally (Python + Go in v0); a bundled grammar with no extractor yet is
    # simply unused, and the `languages` config gates which actually run.
    # Core floor is 0.25: tree-sitter-go 0.25 emits language ABI 15, which needs core >=0.25; 0.25
    # stays backward-compatible with the older (ABI 14) grammars below.
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-python>=0.23,<0.26",
    "tree-sitter-go>=0.23,<0.26",
    "tree-sitter-javascript>=0.23,<0.26",
    "tree-sitter-typescript>=0.23,<0.25",
    "tree-sitter-rust>=0.23,<0.25",
    "tree-sitter-java>=0.23,<0.25",
    "tree-sitter-c>=0.23,<0.25",
    "tree-sitter-cpp>=0.23,<0.25",
    "tree-sitter-ruby>=0.23,<0.25",
    "tree-sitter-c-sharp>=0.23,<0.25",
    "tree-sitter-kotlin>=1.0,<2.0",
    "tree-sitter-scala>=0.23,<0.27",
    "tree-sitter-php>=0.23,<0.25",
    "tree-sitter-swift>=0.7,<0.9",
    "tree-sitter-bash>=0.23,<0.25",
    "tree-sitter-sql>=0.3,<0.4",
]

[project.optional-dependencies]
# Scoped semantic recall over memory+intent (M8, docs/retrieval-design.md §10). Optional by design:
# with this extra uninstalled, retrieval degrades gracefully to the lexical/IDF seeder (= v0).
# numpy is the brute-force cosine index; sentence-transformers is the default local bge-small backend.
embeddings = [
    "numpy>=1.24",
    "sentence-transformers>=2.2",
]
# Host-agnostic pull channel: run yigraf as an MCP server (`yigraf mcp`) so any MCP-capable host
# (Codex, Antigravity, Cursor, Claude Code, …) can pull the graph as tool calls. Optional by design —
# the CLI + Claude Code hooks work without it; `yigraf mcp` guides to install this extra if absent.
mcp = [
    "mcp>=1.2",
]

[project.urls]
Homepage = "https://github.com/mansilla/yigraf"
Repository = "https://github.com/mansilla/yigraf"
Issues = "https://github.com/mansilla/yigraf/issues"

[project.scripts]
yigraf = "yigraf.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yigraf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
