[project]
name = "yigraf"
version = "0.1.13"
description = "A harness primitive for AI coding agents: one connected graph over code, intent, plan, and memory — legible (token-cheap retrieval) and enforceable (intent↔code drift checks)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ricardo Mansilla", email = "rick.mansilla@gmail.com" }]
keywords = ["ai", "agents", "llm", "claude", "code-intelligence", "tree-sitter", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "networkx>=3.4",
    # Structure index. Core (not an extra): the structure graph is foundational. The core
    # industry-language grammars are bundled so support lights up the moment an extractor lands —
    # version ranges are a known-good coexisting set across the tree-sitter grammars.
    # Extractors ship incrementally (Python + Go in v0); a bundled grammar with no extractor yet is
    # simply unused, and the `languages` config gates which actually run.
    # Core floor is 0.25: tree-sitter-go 0.25 emits language ABI 15, which needs core >=0.25; 0.25
    # stays backward-compatible with the older (ABI 14) grammars below.
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-python>=0.23,<0.26",
    "tree-sitter-go>=0.23,<0.26",
    "tree-sitter-javascript>=0.23,<0.26",
    "tree-sitter-typescript>=0.23,<0.25",
    "tree-sitter-rust>=0.23,<0.25",
    "tree-sitter-java>=0.23,<0.25",
    "tree-sitter-c>=0.23,<0.25",
    "tree-sitter-cpp>=0.23,<0.25",
    "tree-sitter-ruby>=0.23,<0.25",
    "tree-sitter-c-sharp>=0.23,<0.25",
    "tree-sitter-kotlin>=1.0,<2.0",
    "tree-sitter-scala>=0.23,<0.27",
    "tree-sitter-php>=0.23,<0.25",
    "tree-sitter-swift>=0.7,<0.9",
    "tree-sitter-bash>=0.23,<0.25",
    "tree-sitter-sql>=0.3,<0.4",
    # The MCP SDK is a core dependency, not an extra: `yigraf mcp` is the universal pull channel every
    # host speaks, and `yigraf install` wires it by default (full power out of the box). It's a single
    # small pure-Python package.
    "mcp>=1.2",
    # Semantic recall over memory+intent (M8, docs/retrieval-design.md §10) — now CORE, on by default.
    # fastembed runs the same bge-small model on ONNX Runtime (~68MB) instead of torch (~1GB+), with
    # measured ≈0.9999 cosine parity on this task (its default artifact is fp16, not int8). That makes
    # "full power out of the box" affordable — no torch tax. Reverses mem:005 (which rejected core
    # embeddings *specifically because of torch*); fastembed sidesteps that. Absent it, retrieval
    # degrades gracefully to the lexical/IDF seeder (= v0). numpy powers the brute-force cosine index.
    "fastembed>=0.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
# The opt-in torch backend for semantic recall. Not needed for semantic recall (fastembed is core and
# on by default) — install this only for Apple-Silicon MPS throughput on large corpora or the exact
# fp32 model. Selected via `embeddings.backend: sentence-transformers` in yigraf/config.yaml.
embeddings-torch = [
    "sentence-transformers>=2.2",
]
# The production Postgres substrate for yigraf online v1 (int:yigraf-online-v1, plan tasks #7–#9). Not
# a hard dependency (mirrors the embeddings extras): the online engine is written against the
# AssertionStore port and fully proven offline against the stdlib SqliteAssertionStore reference
# adapter, so psycopg is needed ONLY to point a hosted deployment at a real Postgres. Absent it, the
# local git-file/SQLite path (int:yigraf-local-v1) is unaffected — the import is lazy.
postgres = [
    "psycopg[binary]>=3.1",
]

[project.urls]
Homepage = "https://github.com/mansilla/yigraf"
Repository = "https://github.com/mansilla/yigraf"
Issues = "https://github.com/mansilla/yigraf/issues"

[project.scripts]
yigraf = "yigraf.cli:main"

[dependency-groups]
# hypothesis powers the property-based invariant suite (epistemic-control-plane #7) — dev-only,
# pure-Python, no network at test time.
dev = ["pytest>=8.0", "hypothesis>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yigraf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Deselect the model-backed tests by default (fastembed is core, so they'd otherwise download a model
# on every run) — keeps the default suite fast + offline. Run them with `pytest -m embeddings`.
addopts = '-q -m "not embeddings"'
markers = ["embeddings: exercises the real embedding backend (downloads a model)"]
